--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
+    "motion": "^12.4.10",
     "next": "^15.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
