--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.11",
     "eslint": "^9",
     "eslint-config-next": "15.1.3"
   }
