--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/oxide-darwin-arm64": "^4.0.15",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/leaflet": "^1.9.16",
     "autoprefixer": "^10.4.20",
