--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.476.0",
+    "motion": "^12.6.2",
     "next": "^15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
