--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.476.0",
     "motion": "^12.6.2",
     "next": "^15.2.1",
