--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-hook/media-query": "^1.1.1",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/leaflet": "^1.9.16",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
