--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
